wip: stabilize microservices architecture and integration
